feat: adjust claude.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "css.customData": [".vscode/tailwindcss.json"],
   "java.configuration.updateBuildConfiguration": "disabled",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "codingcopilot.enableCompletionLanguage": {
+    "scminput": false
+  }
 }
